criação da view e template do profile do evento

--- a/cEventos/cEventos/accounts/templates/accounts/user_profile.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_profile.html
@@ -19,7 +19,7 @@
                 {% endfor %}
             </div>
         {% endif %}
-        <ul class="list-group list-group-flush">
+        <ul class="list-group">
             <p></p>
             <li class="list-group-item">
                 <strong>Nome completo:</strong>
