Alteraçao em template de modificação de senha

--- a/cEventos/cEventos/accounts/templates/accounts/change_password.html
+++ b/cEventos/cEventos/accounts/templates/accounts/change_password.html
@@ -1,28 +1,40 @@
-{% extends "base.html" %} {% load staticfiles %} {% load widget_tweaks %} {% block body %}
-<p></p>
-<h1>Trocar senha</h1>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% load widget_tweaks %}
+{% block body %}
+    <p></p>
+    <h1>Trocar senha</h1>
 
-{% if messages %}
-<div class="alert alert-warning">
-    {% for message in messages %} {{ message }} {% endfor %}
-</div>
-{% endif %}
+    {% if messages %}
+        <div class="alert alert-warning">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endif %}
 
-<form class="" action="" method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="{{ form.old_password.id_for_label }}">Senha antiga</label>
-        {{ form.old_password|add_class:"form-control"|attr:"autofocus" }}
-    </div>
-    <div class="form-group">
-        <label for="{{ form.new_password1.id_for_label }}">Senha nova</label>
-        {{ form.new_password1|add_class:"form-control" }}
-    </div>
-    <div class="form-group">
-        <label for="{{ form.new_password2.id_for_label }}">Confirmação da senha nova</label>
-        {{ form.new_password2|add_class:"form-control" }}
-    </div>
-    <button type="submit" class="btn btn-primary">Alterar senha</button>
-</form>
+    <form class="" action="" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="{{ form.old_password.id_for_label }}">Senha antiga</label>
+            {{ form.old_password|add_class:"form-control"|attr:"autofocus" }}
+        </div>
+        <div class="form-group">
+            <label for="{{ form.new_password1.id_for_label }}">Senha nova</label>
+            {{ form.new_password1|add_class:"form-control" }}
+        </div>
+        <div class="help">
+            <ul>
+                <li>Sua senha precisa conter pelo menos 8 caracteres.</li>
+                <li>Sua senha não pode ser uma senha habitualmente utilizada.</li>
+                <li>Sua senha não pode ser inteiramente numérica.</li>
+            </ul>
+        </div>
+        <div class="form-group">
+            <label for="{{ form.new_password2.id_for_label }}">Confirmação da senha nova</label>
+            {{ form.new_password2|add_class:"form-control" }}
+        </div>
+        <button type="submit" class="btn btn-primary">Alterar senha</button>
+    </form>
 
 {% endblock %}
