adição de botao voltar em templates

--- a/cEventos/cEventos/accounts/templates/accounts/change_password.html
+++ b/cEventos/cEventos/accounts/templates/accounts/change_password.html
@@ -35,6 +35,7 @@
             {{ form.new_password2|add_class:"form-control" }}
         </div>
         <button type="submit" class="btn btn-primary">Alterar senha</button>
+        <input type="button" value="Voltar" onclick="history.back(-1)" class="btn btn-primary"/>
     </form>
 
 {% endblock %}
