--- a/cEventos/cEventos/eventos/templates/eventos/novo_evento.html
+++ b/cEventos/cEventos/eventos/templates/eventos/novo_evento.html
@@ -118,6 +118,7 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Salvar</button>
+                <input type="button" value="Voltar" onclick="history.back(-1)" class="btn btn-primary"/>
             </div>
         </form>
 
