--- a/cEventos/cEventos/eventos/templates/eventos/evento_profile.html
+++ b/cEventos/cEventos/eventos/templates/eventos/evento_profile.html
@@ -11,48 +11,67 @@
             <a href="{% url 'eventos:editar_evento' evento.id %}" class="btn btn-primary" role="button">Editar Evento</a>
         </div>
     {% endif %}
+    {% if user.is_authenticated %}
+        {% if user.id != evento.organizador.id %}
+            {% if inscrito %}
+                <div align="right">
+                    <a href="#" class="btn btn-danger" role="button">Cancelar Inscrição</a>
+                </div>
+            {% else %}
+                <div align="right">
+                    <a href="{% url 'eventos:inscricao_evento' evento.id %}" class="btn btn-primary" role="button">Inscrever-se</a>
+                </div>
+            {% endif %}
+        {% endif %}
+    {% endif %}
     <p></p>
     <div class="row">
+        <div class="col"></div>
         {% if messages %}
-            <div class="alert alert-success" role="alert">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
-        {% endif %}
-        <ul class="list-group col-12">
-            <p></p>
-            <li class="list-group-item">
-                <strong>Nome do Evento:</strong>
-                {{ evento.titulo }}</li>
-            <p></p>
-            <li class="list-group-item">
-                <strong>Local:</strong>
-                {{ evento.local }}</li>
-            <p></p>
-            <li class="list-group-item">
-                <strong>Cidade - UF:</strong>
-                {{ evento.cidade }}
-                -
-                {{ evento.uf }}</li>
-            <p></p>
-            <li class="list-group-item">
-                <strong>Descrição:</strong>
-                {{ evento.descricao }}</li>
-            <p></p>
-            <li class="list-group-item  ">
-                <strong>Data Inicial:</strong>
-                {{ evento.data_inicial }}</li>
-            <p></p>
-            <li class="list-group-item">
-                <strong>Data Final:</strong>
-                {{ evento.data_final }}</li>
-            <p></p>
-            <li class="list-group-item">
-                <strong>Organizador:</strong>
-                {{ evento.organizador.first_name }}
-                {{ evento.organizador.last_name }}</li>
-            <p></p>
-        </ul>
-    </div>
-{% endblock body %}
+            {% for message in messages %}
+                {% if message.level == 20 %}
+                    <div class="alert alert-info col" role="alert">
+                    {% elif message.level == 40 %}
+                        <div class="alert alert-danger" role="alert">
+                        {% endif %}
+                        {{ message }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <div class="col"></div>
+            <ul class="list-group col-12">
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Nome do Evento:</strong>
+                    {{ evento.titulo }}</li>
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Local:</strong>
+                    {{ evento.local }}</li>
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Cidade - UF:</strong>
+                    {{ evento.cidade }}
+                    -
+                    {{ evento.uf }}</li>
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Descrição:</strong>
+                    {{ evento.descricao }}</li>
+                <p></p>
+                <li class="list-group-item  ">
+                    <strong>Data Inicial:</strong>
+                    {{ evento.data_inicial }}</li>
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Data Final:</strong>
+                    {{ evento.data_final }}</li>
+                <p></p>
+                <li class="list-group-item">
+                    <strong>Organizador:</strong>
+                    {{ evento.organizador.first_name }}
+                    {{ evento.organizador.last_name }}</li>
+                <p></p>
+            </ul>
+        </div>
+    {% endblock body %}
